[package]
name = "pgvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
[dependencies]
regex = "1.6.0"
static_init = "1.0.2"
serde-xml-rs = "0.5.1"
thiserror = "1.0.32"
config = "0.13.2"
dirs = "4.0.0"
sled = "0.34.7"
bincode = "1.3.3"
openssl = "0.10.41"
hex = "0.4.3"
compress-tools = "0.13.0"
clap = { version = "3.2.20", features = ["derive", "env"] }
dialoguer = "0.10.2"
ureq = "2.5.0"
[dependencies.serde]
version = "1.0.143"
features = [
    "derive"
]